- Removed Base64 class, Replaced by native javax.xml.DataTypeConverter for handling base64 - Added xmlbeans dep for validating XML, esp. anyURI as java.net.URI not compliant with XSD anyURI type - removed uses of java.net.URI for attribute datatype since not compliant with XSD anyURI - Fixed BUG when no subject and resource and action attributes in request - Use of parameter types - Changed AttributeProxy interface and implementations (added a AbstractPrimitiveAttributeProxy class for primitive types) to allow for Structure attribute datatypes such as XML node/JAXBElements