@@ -33,15 +33,13 @@
  */
 package com.sun.xacml.attr;
 
-import com.sun.xacml.ParsingException;
-
-import java.io.IOException;
-
-import java.net.URI;
-
 import java.util.Arrays;
 
+import javax.xml.bind.DatatypeConverter;
+
 import org.w3c.dom.Node;
+
+import com.sun.xacml.ParsingException;
 import com.sun.xacml.attr.xacmlv3.AttributeValue;
 
 /**
@@ -59,22 +57,11 @@ public class Base64BinaryAttribute extends AttributeValue
      */
     public static final String identifier =
         "http://www.w3.org/2001/XMLSchema#base64Binary";
- 
-    /**
-     * URI version of name for this type
-     */
-    public static final URI identifierURI = URI.create(identifier);
 
     /**
      * The actual binary value that this object represents.
      */
     private byte [] value;
-
-    /**
-     * The value returned by toString(). Cached, but only
-     * generated if needed.
-     */
-    private String strValue;
 
     /**
      * Creates a new <code>Base64BinaryAttribute</code> that represents
@@ -83,11 +70,11 @@ public class Base64BinaryAttribute extends AttributeValue
      * @param value the <code>byte []</code> value to be represented
      */
     public Base64BinaryAttribute(byte [] value) {
-        super(identifierURI);
+        super(identifier);
 
         // This will throw a NullPointerException if value == null.
         // That's what we want in that case.
-        this.value = (byte []) value.clone();
+        this.value = value.clone();
         
         this.getContent().add(this.encode());
     }
@@ -117,15 +104,7 @@ public class Base64BinaryAttribute extends AttributeValue
      */
     public static Base64BinaryAttribute getInstance(String value)
         throws ParsingException {
-        byte [] bytes = null;
-
-        try {
-            bytes = Base64.decode(value, false);
-        } catch (IOException e) {
-            throw new ParsingException("Couldn't parse purported " +
-                                       "Base64 string: " + value, e);
-        }
-        
+        final byte [] bytes = DatatypeConverter.parseBase64Binary(value);
         return new Base64BinaryAttribute(bytes);
     }
 
@@ -137,7 +116,7 @@ public class Base64BinaryAttribute extends AttributeValue
      * @return the <code>byte []</code> value
      */
     public byte [] getValue() {
-        return (byte []) value.clone();
+        return value.clone();
     }
 
     /**
@@ -148,7 +127,8 @@ public class Base64BinaryAttribute extends AttributeValue
      *
      * @return true if this object and the input represent the same value
      */
-    public boolean equals(Object o) {
+    @Override
+	public boolean equals(Object o) {
         if (! (o instanceof Base64BinaryAttribute))
             return false;
 
@@ -164,46 +144,16 @@ public class Base64BinaryAttribute extends AttributeValue
      *
      * @return the object's hashcode value
      */
-    public int hashCode() {
-        int code = (int)(value[0]);
+    @Override
+	public int hashCode() {
+        int code = value[0];
 
         for (int i = 1; i < value.length; i++) {
             code *= 31;
-            code += (int)(value[i]);
+            code += value[i];
         }
 
         return code;
-    }
-
-    /**
-     * Make the String representation of this object.
-     *
-     * @return the String representation
-     */
-    private String makeStringRep() {
-        return Base64.encode(value);
-    }
-
-    /**
-     * Returns a String representation.
-     *
-     * @return the String representation
-     */
-    public String toString() {
-        if (strValue == null)
-            strValue = makeStringRep();
-
-        return "Base64BinaryAttribute: [\n" + strValue + "]\n";
-    }
-
-    /**
-     *
-     */
-    public String encode() {
-        if (strValue == null)
-            strValue = makeStringRep();
-
-        return strValue;
     }
 
 }
